--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 flask-cors==4.0.1
 gunicorn==21.2.0
 pymongo==4.6.1
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 
 numpy==1.23.5
@@ -12,3 +13,4 @@ deepface==0.0.96
 pillow
 
 requests
+
