--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ python-dotenv==1.0.1
 numpy==1.23.5
 opencv-python-headless==4.8.0.76
 deepface==0.0.96
+tensorflow==2.12.0
 
 pillow
 
 requests
+
 
 
